Placeholder text alignment fix - 07.03.23

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,12 +25,16 @@
 }
 
 .placeholder {
-    position: fixed;
-    top: 50%;
-    left: 50%;
+    display: flex;
+    flex: auto;
+    padding-left: 20px;
+    justify-content: center;
+    min-height: 80vh;
+    align-items: center;
+    text-align: center;
     font-size: 28px;
     font-family: sans-serif;
     font-feature-settings: normal;
     font-weight: bold;
-    color: #111f36;
+    color: #334767;
 }
